--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <nav class="nav">
             <a href="index.html" class="logo">Web<span class="dark-logo">Studio</span></a>
     
-            <ul class="nav-list list">
-              <li>
-                <a href="index.html" class="nav-link active-page link">Студия</a>
+            <ul class="nav__list list">
+              <li class="nav__item">
+                <a href="index.html" class="nav__link active-page link">Студия</a>
               </li>
-              <li>
-                <a href="portfolio.html" class="nav-link link">Портфолио</a>
+              <li class="nav__item">
+                <a href="portfolio.html" class="nav__link link">Портфолио</a>
               </li>
-              <li>
-                <a href="" class="nav-link link">Контакты</a>
+              <li class="nav__item">
+                <a href="" class="nav__link link">Контакты</a>
               </li>
             </ul>
         </nav>
