--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
             <ul class="nav__list list">
               <li class="nav__item">
-                <a href="index.html" class="nav__link active-page link">Студия</a>
+                <a href="index.html" class="nav__link nav__link--active link">Студия</a>
               </li>
               <li class="nav__item">
                 <a href="portfolio.html" class="nav__link link">Портфолио</a>
@@ -31,14 +31,14 @@
         <!--контакты-->
           <ul class="contact-list list">
                 <li>
-                  <a href="mailto:info@devstudio.com" class="contact-link link">
+                  <a href="mailto:info@devstudio.com" class="contact__link link">
                     <svg class="mail-icon icon" width="16px" height="12px">
                         <use href="./images/icons.svg#envelope"></use>
                     </svg>
                     info@devstudio.com</a>
                 </li>
                 <li>
-                  <a href="tel:+380961111111" class="contact-link link">
+                  <a href="tel:+380961111111" class="contact__link link">
                     <svg class="tel-icon icon" width="10px" height="16px">
                         <use href="./images/icons.svg#smartphone"></use>
                     </svg>
