--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
               <a href="index.html" class="nav__link link">Студия</a>
             </li>
             <li class="nav__item">
-              <a href="portfolio.html" class="nav__link active-page link">Портфолио</a>
+              <a href="portfolio.html" class="nav__link nav__link--active link">Портфолио</a>
             </li>
             <li class="nav__item">
               <a href="" class="nav__link link">Контакты</a>
@@ -32,14 +32,14 @@
       </nav>
       <ul class="contact-list list">
         <li>
-          <a href="mailto:info@devstudio.com" class="contact-link link">
+          <a href="mailto:info@devstudio.com" class="contact__link link">
             <svg class="mail-icon icon" width="16px" height="12px">
                 <use href="./images/icons.svg#envelope"></use>
             </svg>
             info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111" class="contact-link link">
+          <a href="tel:+380961111111" class="contact__link link">
             <svg class="tel-icon icon" width="10px" height="16px">
                 <use href="./images/icons.svg#smartphone"></use>
             </svg>
