--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 </section>
 
 <!--Постоянные клиенты-->
-<section class="section clients-section">
+<section class="section _about.scss-section">
     <div class="container clients-container">
         <h2 class="section-title">Постоянные клиенты</h2>
 
