--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
  
 <link rel="stylesheet" href="./css/main.min.css"/>
-<!--<link rel="stylesheet" href="css/styles.css"/>-->
 
     <title>Веб-студия</title>
 </head>
@@ -542,7 +541,7 @@
   </span>
 </label>
            <label class="register-form-agreement">
-                <input class="register-checkbox visuaaly-hidden" type="checkbox" name="agreement" />
+                <input class="register-checkbox visually-hidden" type="checkbox" name="agreement" />
                 <svg class="register-icon" width="16" height="15">
                   <use class="register-icon-uncheck" href="./images/icons.svg#icon-vector"></use>
                   <use class="register-icon-check" href="./images/icons.svg#icon-icon-check"></use>
